--- a/res/values-ka/strings.xml
+++ b/res/values-ka/strings.xml
@@ -1104,8 +1104,7 @@
     <string name="display_white_balance_title" msgid="2624544323029364713">"ეკრანის თეთრის ბალანსი"</string>
     <string name="display_white_balance_summary" msgid="7625456704950209050"></string>
     <string name="peak_refresh_rate_title" msgid="1878771412897140903">"Smooth Display"</string>
-    <!-- no translation found for peak_refresh_rate_summary (3627278682437562787) -->
-    <skip />
+    <string name="peak_refresh_rate_summary" msgid="3627278682437562787">"გარკვეული კონტენტისთვის განახლების სიხშირის ავტომატურად გაზრდა 60-დან და შე <xliff:g id="ID_1">%1$s</xliff:g> ჰც-მდე. ზრდის ბატარეის მოხმარებას."</string>
     <string name="force_high_refresh_rate_toggle" msgid="3325789621928312050">"განახლების პიკური სიხშირის იძულება"</string>
     <string name="force_high_refresh_rate_desc" msgid="7794566420873814875">"განახლების უმაღლესი სიხშირე შეხებაზე გაუმჯობესებული რეაგირებისთვის და უფრო ერთგვაროვანი ანიმაციისთვის. გაზრდის ბატარეის მოხმარებას."</string>
     <string name="adaptive_sleep_title" msgid="2987961991423539233">"ეკრანზე ყურადღება"</string>
@@ -1163,8 +1162,7 @@
     <string name="dark_ui_bedtime_footer_action" msgid="1493095487994054339">"ძილის დროის რეჟიმის პარამეტრები"</string>
     <string name="screen_timeout" msgid="7709947617767439410">"ეკრანის დროის ლიმიტი"</string>
     <string name="screen_timeout_summary" msgid="5558778019594643427">"<xliff:g id="TIMEOUT_DESCRIPTION">%1$s</xliff:g> უმოქმედობის შემდეგ"</string>
-    <!-- no translation found for screen_timeout_summary_not_set (5107680774964178875) -->
-    <skip />
+    <string name="screen_timeout_summary_not_set" msgid="5107680774964178875">"არ არის დაყენებული"</string>
     <string name="wallpaper_settings_title" msgid="5635129851136006383">"ფონი"</string>
     <string name="style_and_wallpaper_settings_title" msgid="2232042809407308946">"ფონი და სტილი"</string>
     <string name="wallpaper_dashboard_summary" msgid="2324472863981057118">"მთავარი, ჩაკეტილი ეკრანი"</string>
@@ -1175,6 +1173,8 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"ცადეთ სხვადასხვა სტილი, ფონი და ა.შ."</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"ეკრანმზოგი"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"ეკრანმზოგი"</string>
+    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
+    <skip />
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"გამოიყენეთ ეკრანმზოგი"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"დატენვისას ან სანამ ჩამაგრებულია"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"დატენვისას"</string>
@@ -2849,8 +2849,7 @@
     <string name="remove_guest_on_exit_summary" msgid="3969962695703280353">"სტუმრის ყველა აპის და მონაცემის წაშლა სტუმრის რეჟიმიდან გასვლისას"</string>
     <string name="remove_guest_on_exit_dialog_title" msgid="2310442892536079416">"გსურთ სტუმრის აქტივობის წაშლა?"</string>
     <string name="remove_guest_on_exit_dialog_message" msgid="8112409834021851883">"აპები და მონაცემები სტუმრის ამ სესიიდან წაიშლება ახლავე, ხოლო სტუმრის ყველა მომავალი აქტივობა წაიშლება ყოველთვის, როცა სტუმრის რეჟიმიდან გახვალთ"</string>
-    <!-- no translation found for remove_guest_on_exit_keywords (4961310523576166193) -->
-    <skip />
+    <string name="remove_guest_on_exit_keywords" msgid="4961310523576166193">"წაშლა, სტუმარი, აქტივობა, წაშლა, მონაცემები, ვიზიტორი, წაშლა"</string>
     <string name="enable_guest_calling" msgid="8300355036005240911">"სტუმრისთვის ტელეფონის გამოყენების ნების დართვა"</string>
     <string name="enable_guest_calling_summary" msgid="4748224917641204782">"საუბრის ისტორია გაზიარდება სტუმარ მომხმარებელთან."</string>
     <string name="user_enable_calling_sms" msgid="8546430559552381324">"სატელ. ზარების და SMS-ის ჩართვა"</string>
@@ -3114,8 +3113,7 @@
     <string name="call_volume_option_title" msgid="1461105986437268924">"ზარის ხმა"</string>
     <string name="alarm_volume_option_title" msgid="6398641749273697140">"მაღვიძარას ხმა"</string>
     <string name="ring_volume_option_title" msgid="1520802026403038560">"ზარების/შეტყობინებების ხმა"</string>
-    <!-- no translation found for separate_ring_volume_option_title (2212910223857375951) -->
-    <skip />
+    <string name="separate_ring_volume_option_title" msgid="2212910223857375951">"ზარის ხმა"</string>
     <string name="notification_volume_option_title" msgid="4838818791683615978">"შეტყობინების ხმა"</string>
     <string name="ringtone_title" msgid="3271453110387368088">"ტელეფონის ზარი"</string>
     <string name="notification_ringtone_title" msgid="6924501621312095512">"შეტყობინებების ნაგულისხმევი ხმა"</string>
@@ -3414,6 +3412,10 @@
     <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"პარამეტრების შეცვლა თითოეული აპისთვის, რომელიც შეტყობინებებს გზავნის"</string>
     <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"მოწყობილობაზე ნაჩვენები აპები"</string>
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"ამ აპს არ აქვს გაძლიერებული პარამეტრების მხარდაჭერა"</string>
+    <!-- no translation found for notif_listener_more_settings (1348409392307208921) -->
+    <skip />
+    <!-- no translation found for notif_listener_more_settings_desc (7995492074281663658) -->
+    <skip />
     <string name="vr_listeners_title" msgid="4960357292472540964">"ვირტ. რეალობის დამხმარე სერვისები"</string>
     <string name="no_vr_listeners" msgid="8442646085375949755">"ვირტუალური რეალობის დამხმარე სერვისად გაშვება არცერთ დაინსტალირებულ აპს არ მოუთხოვია."</string>
     <string name="vr_listener_security_warning_title" msgid="7026351795627615177">"გსურთ ვირტუალური რეალობის სერვისისთვის <xliff:g id="SERVICE">%1$s</xliff:g>-ზე წვდომის დაშვება?"</string>
@@ -3868,8 +3870,7 @@
     <string name="users_summary" msgid="8473589474976307510">"შესული ხართ, როგორც <xliff:g id="USER_NAME">%1$s</xliff:g>"</string>
     <string name="android_version_summary" msgid="7818952662015042768">"განახლდა Android <xliff:g id="VERSION">%1$s</xliff:g>-ზე"</string>
     <string name="android_version_pending_update_summary" msgid="5404532347171027730">"განახლება ხელმისაწვდომია"</string>
-    <!-- no translation found for disabled_by_policy_title (6852347040813204503) -->
-    <skip />
+    <string name="disabled_by_policy_title" msgid="6852347040813204503">"დაბლოკილია სამუშაო პოლიტიკით"</string>
     <string name="disabled_by_policy_title_adjust_volume" msgid="1669689058213728099">"ხმის შეცვლა ვერ მოხერხდა"</string>
     <string name="disabled_by_policy_title_outgoing_calls" msgid="400089720689494562">"დარეკვა ვერ ხერხდება"</string>
     <string name="disabled_by_policy_title_sms" msgid="8951840850778406831">"SMS შეტყობინებების გაგზავნა ვერ ხერხდება"</string>
@@ -3879,8 +3880,7 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"დაბლოკილია თქვენი კრედიტის გამცემის მიერ"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"საჭიროა მშობელი"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"გადაეცით ტელეფონი მშობელს ამის დაყენების დასაწყებად"</string>
-    <!-- no translation found for default_admin_support_msg (8816296554831532033) -->
-    <skip />
+    <string name="default_admin_support_msg" msgid="8816296554831532033">"დამატებითი ინფორმაციისთვის დაუკავშირდით თქვენს IT ადმინისტრატორს"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"დაწვრილებით"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"თქვენს ადმინისტრატორს შეუძლია სამსახურის პროფილთან დაკავშირებული აპებისა და მონაცემების (მათ შორის, პარამეტრების, ნებართვების, კორპორაციული წვდომის, ქსელის აქტივობისა და თქვენი მოწყობილობის მდებარეობის ინფორმაციის) მონიტორინგი და მართვა."</string>
     <string name="admin_profile_owner_user_message" msgid="4929926887231544950">"თქვენს ადმინისტრატორს შეუძლია ამ მომხმარებელთან დაკავშირებული აპებისა და მონაცემების (მათ შორის, პარამეტრების, ნებართვების, კორპორაციული წვდომის, ქსელის აქტივობისა და თქვენი მოწყობილობის მდებარეობის ინფორმაციის) მონიტორინგი და მართვა."</string>
@@ -4711,8 +4711,7 @@
     <string name="developer_options_main_switch_title" msgid="1720074589554152501">"დეველოპერთა პარამეტრების გამოყენება"</string>
     <string name="default_print_service_main_switch_title" msgid="4697133737128324036">"ბეჭდვის სერვისის გამოყენება"</string>
     <string name="multiple_users_main_switch_title" msgid="6686858308083037810">"რამდენიმე მომხმარებლის დაშვება"</string>
-    <!-- no translation found for multiple_users_main_switch_keywords (4845954458094134356) -->
-    <skip />
+    <string name="multiple_users_main_switch_keywords" msgid="4845954458094134356">"დაშვება, მრავალჯერადი, მომხმარებელი, ნებართვა, ბევრი"</string>
     <string name="wireless_debugging_main_switch_title" msgid="8463499572781441719">"უსადენო გამართვის გამოყენება"</string>
     <string name="graphics_driver_main_switch_title" msgid="6125172901855813790">"გრაფიკული დრაივერის პარამეტრების გამოყენება"</string>
     <string name="night_light_main_switch_title" msgid="3428298022467805219">"ღამის ნათების გამოყენება"</string>
