--- a/res/values-ur/strings.xml
+++ b/res/values-ur/strings.xml
@@ -1104,8 +1104,7 @@
     <string name="display_white_balance_title" msgid="2624544323029364713">"وہائٹ بیلنس ڈسپلے کریں"</string>
     <string name="display_white_balance_summary" msgid="7625456704950209050"></string>
     <string name="peak_refresh_rate_title" msgid="1878771412897140903">"ہموار ڈسپلے"</string>
-    <!-- no translation found for peak_refresh_rate_summary (3627278682437562787) -->
-    <skip />
+    <string name="peak_refresh_rate_summary" msgid="3627278682437562787">"‏کچھ مواد کے لیے 60 سے <xliff:g id="ID_1">%1$s</xliff:g> Hz تک ریفریش کی شرح خودکار طور پر بڑھ جاتی ہے۔ بیٹری کے استعمال میں کرتی ہیں"</string>
     <string name="force_high_refresh_rate_toggle" msgid="3325789621928312050">"زیادہ سے زیادہ ریفریش کی شرح پر مجبور کریں"</string>
     <string name="force_high_refresh_rate_desc" msgid="7794566420873814875">"اعلی ترین ریفریش کرنے کی بہتر شرح کے ليے ٹچ کی کارکردگی اور اینیمیشن کوالٹی۔ بیٹری کے استعمال میں اضافہ کرتا ہے۔"</string>
     <string name="adaptive_sleep_title" msgid="2987961991423539233">"اسکرین پر توجہ"</string>
@@ -1174,6 +1173,8 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"مختلف اسٹائل، وال پیپرز، اور مزید بہت کچھ آزمائیں"</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"اسکرین سیور"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"اسکرین سیور"</string>
+    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
+    <skip />
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"اسکرین سیور کا استعمال کریں"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"ڈاک سے منسلک یا چارج ہونے کے دوران"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"چارج ہوتے وقت"</string>
@@ -2848,8 +2849,7 @@
     <string name="remove_guest_on_exit_summary" msgid="3969962695703280353">"مہمان وضع سے باہر نکلتے وقت تمام مہمان ایپس اور ڈیٹا کو حذف کریں"</string>
     <string name="remove_guest_on_exit_dialog_title" msgid="2310442892536079416">"مہمان کی سرگرمی کو حذف کریں؟"</string>
     <string name="remove_guest_on_exit_dialog_message" msgid="8112409834021851883">"اس مہمان سیشن سے ایپس اور ڈیٹا کو اب حذف کر دیا جائے گا، اور ہر دفعہ آپ کے مہمان وضع سے باہر نکلنے پر مہمان کی مستقبل کی تمام سرگرمی حذف کر دی جائے گی"</string>
-    <!-- no translation found for remove_guest_on_exit_keywords (4961310523576166193) -->
-    <skip />
+    <string name="remove_guest_on_exit_keywords" msgid="4961310523576166193">"حذف کریں، مہمان، سرگرمی، ہٹائیں، ڈیٹا، ملاحظہ کاران، مٹا دیں"</string>
     <string name="enable_guest_calling" msgid="8300355036005240911">"مہمان کو فون استعمال کرنے کی اجازت دیں"</string>
     <string name="enable_guest_calling_summary" msgid="4748224917641204782">"کال کی سرگزشت کا مہمان صارف کے ساتھ اشتراک کیا جائے گا"</string>
     <string name="user_enable_calling_sms" msgid="8546430559552381324">"‏فون کالز اور SMS آن کریں"</string>
@@ -3113,8 +3113,7 @@
     <string name="call_volume_option_title" msgid="1461105986437268924">"کال کا والیوم"</string>
     <string name="alarm_volume_option_title" msgid="6398641749273697140">"الارم والیوم"</string>
     <string name="ring_volume_option_title" msgid="1520802026403038560">"گھنٹی اور اطلاعات کا والیوم"</string>
-    <!-- no translation found for separate_ring_volume_option_title (2212910223857375951) -->
-    <skip />
+    <string name="separate_ring_volume_option_title" msgid="2212910223857375951">"رنگ والیوم"</string>
     <string name="notification_volume_option_title" msgid="4838818791683615978">"اطلاع کا والیوم"</string>
     <string name="ringtone_title" msgid="3271453110387368088">"فون رنگ ٹون"</string>
     <string name="notification_ringtone_title" msgid="6924501621312095512">"اطلاع کی ڈیفالٹ آواز"</string>
@@ -3413,6 +3412,10 @@
     <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"اطلاعات بھیجنے والی ہر ایپ کی ترتیبات تبدیل کریں"</string>
     <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"آلے پر دکھائی دینے والی ایپس"</string>
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"یہ ایپ بہتر کردہ ترتیبات کو سپورٹ نہیں کرتی ہے"</string>
+    <!-- no translation found for notif_listener_more_settings (1348409392307208921) -->
+    <skip />
+    <!-- no translation found for notif_listener_more_settings_desc (7995492074281663658) -->
+    <skip />
     <string name="vr_listeners_title" msgid="4960357292472540964">"‏VR مددگار سروسز"</string>
     <string name="no_vr_listeners" msgid="8442646085375949755">"‏کسی انسٹال کردہ ایپ نے VR مددگار سروسز کے طور پر چلائے جانے کی درخواست نہیں کی ہے۔"</string>
     <string name="vr_listener_security_warning_title" msgid="7026351795627615177">"‏<xliff:g id="SERVICE">%1$s</xliff:g> کیلئے VR سروس کی رسائی کی اجازت دیں؟"</string>
@@ -3867,8 +3870,7 @@
     <string name="users_summary" msgid="8473589474976307510">"بطور <xliff:g id="USER_NAME">%1$s</xliff:g> سائن ان ہے"</string>
     <string name="android_version_summary" msgid="7818952662015042768">"‏Android <xliff:g id="VERSION">%1$s</xliff:g> پر اپ ڈیٹ کردہ"</string>
     <string name="android_version_pending_update_summary" msgid="5404532347171027730">"اپ ڈیٹ دستیاب ہے"</string>
-    <!-- no translation found for disabled_by_policy_title (6852347040813204503) -->
-    <skip />
+    <string name="disabled_by_policy_title" msgid="6852347040813204503">"کام کی پالیسی کے ذریعے مسدود کردہ"</string>
     <string name="disabled_by_policy_title_adjust_volume" msgid="1669689058213728099">"والیوم تبدیل نہیں کر سکتے"</string>
     <string name="disabled_by_policy_title_outgoing_calls" msgid="400089720689494562">"کالز نہیں کر سکتے"</string>
     <string name="disabled_by_policy_title_sms" msgid="8951840850778406831">"‏SMS پیغامات نہیں بھیج سکتے"</string>
@@ -3878,8 +3880,7 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"آپ کے کریڈٹ فراہم کنندہ نے مسدود کیا ہے"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"والد/والدہ درکار ہیں"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"اس کا سیٹ اپ شروع کرنے کیلئے فون کو اپنے والدین کے حوالے کریں"</string>
-    <!-- no translation found for default_admin_support_msg (8816296554831532033) -->
-    <skip />
+    <string name="default_admin_support_msg" msgid="8816296554831532033">"‏مزید معلومات کے لیے، اپنے IT منتظم سے رابطہ کریں"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"مزید تفصیلات"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"آپ کا منتظم آپ کے دفتری پروفائل سے وابستہ ایپس اور ڈیٹا، بشمول ترتیبات، اجازتیں، کارپوریٹ رسائی، نیٹ ورک کی سرگرمی اور آلہ کے مقام کی معلومات مانیٹر اور منظم کر سکتا ہے۔"</string>
     <string name="admin_profile_owner_user_message" msgid="4929926887231544950">"آپ کا منتظم اس صارف سے وابستہ ایپس اور ڈیٹا، بشمول ترتیبات، اجازتیں، کارپوریٹ رسائی، نیٹ ورک کی سرگرمی اور آلہ کے مقام کی معلومات مانیٹر اور منظم کر سکتا ہے۔"</string>
@@ -4710,8 +4711,7 @@
     <string name="developer_options_main_switch_title" msgid="1720074589554152501">"ڈویلپر کے اختیارات کا استعمال کریں"</string>
     <string name="default_print_service_main_switch_title" msgid="4697133737128324036">"پرنٹ سروس کا استعمال کریں"</string>
     <string name="multiple_users_main_switch_title" msgid="6686858308083037810">"متعدد صارفین کو اجازت دیں"</string>
-    <!-- no translation found for multiple_users_main_switch_keywords (4845954458094134356) -->
-    <skip />
+    <string name="multiple_users_main_switch_keywords" msgid="4845954458094134356">"اجازت دیں، متعدد، صارف، اجازت، بہت سے"</string>
     <string name="wireless_debugging_main_switch_title" msgid="8463499572781441719">"وائرلیس ڈیبگنگ کا استعمال کریں"</string>
     <string name="graphics_driver_main_switch_title" msgid="6125172901855813790">"گرافکس ڈرائیور کی ترتیبات کا استعمال کریں"</string>
     <string name="night_light_main_switch_title" msgid="3428298022467805219">"نائٹ لائٹ کا استعمال کریں"</string>
