--- a/res/values-uz/strings.xml
+++ b/res/values-uz/strings.xml
@@ -1110,8 +1110,7 @@
     <string name="display_white_balance_title" msgid="2624544323029364713">"Ekrandagi oq rang muvozanati"</string>
     <string name="display_white_balance_summary" msgid="7625456704950209050"></string>
     <string name="peak_refresh_rate_title" msgid="1878771412897140903">"Smooth Display"</string>
-    <!-- no translation found for peak_refresh_rate_summary (3627278682437562787) -->
-    <skip />
+    <string name="peak_refresh_rate_summary" msgid="3627278682437562787">"Ayrim kontent uchun ekranning yangilanish chastotasi 60-<xliff:g id="ID_1">%1$s</xliff:g> Gs orasida almashib turadi. Batareya tezroq sarflanadi."</string>
     <string name="force_high_refresh_rate_toggle" msgid="3325789621928312050">"Eng yuqori majburiy yangilanish chastotasi"</string>
     <string name="force_high_refresh_rate_desc" msgid="7794566420873814875">"Ekran sensorining javob qaytarishi va animatsiyalar sifati uchun eng yuqori yangilanish chastotasi Batareya tezroq sarflanadi."</string>
     <string name="adaptive_sleep_title" msgid="2987961991423539233">"Moslashuvchan kutish rejimi"</string>
@@ -1169,8 +1168,7 @@
     <string name="dark_ui_bedtime_footer_action" msgid="1493095487994054339">"Uyqu vaqti rejimi sozlamalari"</string>
     <string name="screen_timeout" msgid="7709947617767439410">"Ekranning kutish vaqti"</string>
     <string name="screen_timeout_summary" msgid="5558778019594643427">"<xliff:g id="TIMEOUT_DESCRIPTION">%1$s</xliff:g> harakatsizlikdan keyin"</string>
-    <!-- no translation found for screen_timeout_summary_not_set (5107680774964178875) -->
-    <skip />
+    <string name="screen_timeout_summary_not_set" msgid="5107680774964178875">"Berilmagan"</string>
     <string name="wallpaper_settings_title" msgid="5635129851136006383">"Fon rasmi"</string>
     <string name="style_and_wallpaper_settings_title" msgid="2232042809407308946">"Fon rasmi va uslubi"</string>
     <string name="wallpaper_dashboard_summary" msgid="2324472863981057118">"Bosh ekran, ekran qulfi"</string>
@@ -1181,6 +1179,8 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"Boshqa uslub va fon rasmlaridan foydalaning."</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"Ekran lavhasi"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"ekran lavhasi"</string>
+    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
+    <skip />
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"Ekran lavhasidan foydalanish"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"Quvvat yoki dok-stansiya"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"Quvvat olayotganda"</string>
@@ -2855,8 +2855,7 @@
     <string name="remove_guest_on_exit_summary" msgid="3969962695703280353">"Mehmon rejimidan chiqishda barcha mehmon ilovalari va maʼlumotlarini oʻchirish"</string>
     <string name="remove_guest_on_exit_dialog_title" msgid="2310442892536079416">"Mehmon faoliyati tozalansinmi?"</string>
     <string name="remove_guest_on_exit_dialog_message" msgid="8112409834021851883">"Joriy mehmon seansidagi ilova va maʼlumotlar hozir tozalanadi va har safar mehmon rejimidan chiqish vaqtida barcha keyingi mehmon faolliklari tozalanadi"</string>
-    <!-- no translation found for remove_guest_on_exit_keywords (4961310523576166193) -->
-    <skip />
+    <string name="remove_guest_on_exit_keywords" msgid="4961310523576166193">"oʻchirish, mehmon, harakatlar, olib tashlash, maʼlumotlar, tashrifchi, tozalash"</string>
     <string name="enable_guest_calling" msgid="8300355036005240911">"Mehmonga telefon ishlatishi uchun ruxsat"</string>
     <string name="enable_guest_calling_summary" msgid="4748224917641204782">"Chaqiruvlar tarixi mehmon foydalanuvchiga ham ulashiladi"</string>
     <string name="user_enable_calling_sms" msgid="8546430559552381324">"Telefon chaqiruvlari va SMS"</string>
@@ -3120,8 +3119,7 @@
     <string name="call_volume_option_title" msgid="1461105986437268924">"Suhbat tovushi"</string>
     <string name="alarm_volume_option_title" msgid="6398641749273697140">"Signal tovushi"</string>
     <string name="ring_volume_option_title" msgid="1520802026403038560">"Jiringlash va bildirishnoma tovushi"</string>
-    <!-- no translation found for separate_ring_volume_option_title (2212910223857375951) -->
-    <skip />
+    <string name="separate_ring_volume_option_title" msgid="2212910223857375951">"Jiringlash tovushi"</string>
     <string name="notification_volume_option_title" msgid="4838818791683615978">"Bildirishnomalar ovozi"</string>
     <string name="ringtone_title" msgid="3271453110387368088">"Telefon ringtoni"</string>
     <string name="notification_ringtone_title" msgid="6924501621312095512">"Standart bildirishnoma tovushi"</string>
@@ -3420,6 +3418,10 @@
     <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"Bildirishnomalar yuboruvchi har bir ilova uchun sozlamalarni oʻzgartirish"</string>
     <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"Qurilmada chiqadigan ilovalar"</string>
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"Bu ilovada kengaytirilgan sozlamalar ishlamaydi"</string>
+    <!-- no translation found for notif_listener_more_settings (1348409392307208921) -->
+    <skip />
+    <!-- no translation found for notif_listener_more_settings_desc (7995492074281663658) -->
+    <skip />
     <string name="vr_listeners_title" msgid="4960357292472540964">"Yordamchi VR xizmatlar"</string>
     <string name="no_vr_listeners" msgid="8442646085375949755">"Hech qanday ilova yordamchi VR xizmatlar sifatida ishga tushirilishiga ruxsat so‘ramagan."</string>
     <string name="vr_listener_security_warning_title" msgid="7026351795627615177">"VR xizmatiga “<xliff:g id="SERVICE">%1$s</xliff:g>” xizmatidan foydalanishga ruxsat berilsinmi?"</string>
@@ -3874,8 +3876,7 @@
     <string name="users_summary" msgid="8473589474976307510">"<xliff:g id="USER_NAME">%1$s</xliff:g> sifatida kirgansiz"</string>
     <string name="android_version_summary" msgid="7818952662015042768">"Android <xliff:g id="VERSION">%1$s</xliff:g>"</string>
     <string name="android_version_pending_update_summary" msgid="5404532347171027730">"Yangilanish chiqdi"</string>
-    <!-- no translation found for disabled_by_policy_title (6852347040813204503) -->
-    <skip />
+    <string name="disabled_by_policy_title" msgid="6852347040813204503">"Ishga oid qoidalar tomonidan bloklangan"</string>
     <string name="disabled_by_policy_title_adjust_volume" msgid="1669689058213728099">"Tovush balandligini o‘zgartirib bo‘lmaydi"</string>
     <string name="disabled_by_policy_title_outgoing_calls" msgid="400089720689494562">"Telefon qilinmaydi"</string>
     <string name="disabled_by_policy_title_sms" msgid="8951840850778406831">"SMS xabarlar yuborilmaydi"</string>
@@ -3885,8 +3886,7 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"Kredit idorangiz tomonidan bloklandi"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"Ota-ona zarur"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"Buni sozlash uchun telefonni ota-onangizga bering"</string>
-    <!-- no translation found for default_admin_support_msg (8816296554831532033) -->
-    <skip />
+    <string name="default_admin_support_msg" msgid="8816296554831532033">"Batafsil axborot olish uchun administratoringizga murojaat qiling"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"Qo‘shimcha tafsilotlar"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"Administratoringiz ishchi profilingiz bilan bog‘liq ilova va ma’lumotlarni, jumladan, sozlamalar, ruxsatnomalar, korporativ kirish huquqi, tarmoqdagi faollik va qurilmaning joylashuvi haqidagi ma’lumotlarni kuzatishi va boshqarishi mumkin."</string>
     <string name="admin_profile_owner_user_message" msgid="4929926887231544950">"Administratoringiz bu foydalanuvchi bilan bog‘liq ilova va ma’lumotlarni, jumladan, sozlamalar, ruxsatnomalar, korporativ kirish huquqi, tarmoqdagi faollik va qurilmaning joylashuvi haqidagi ma’lumotlarni kuzatishi va boshqarishi mumkin."</string>
@@ -4717,8 +4717,7 @@
     <string name="developer_options_main_switch_title" msgid="1720074589554152501">"Dasturchi sozlamalaridan foydalanish"</string>
     <string name="default_print_service_main_switch_title" msgid="4697133737128324036">"Chop etish xizmatidan foydalanish"</string>
     <string name="multiple_users_main_switch_title" msgid="6686858308083037810">"Bir nechta foydalanuvchiga ruxsat berish"</string>
-    <!-- no translation found for multiple_users_main_switch_keywords (4845954458094134356) -->
-    <skip />
+    <string name="multiple_users_main_switch_keywords" msgid="4845954458094134356">"ruxsat, bir nechta, foydalanuvchi, ruxsat berish, koʻp"</string>
     <string name="wireless_debugging_main_switch_title" msgid="8463499572781441719">"Wi-Fi orqali debagging"</string>
     <string name="graphics_driver_main_switch_title" msgid="6125172901855813790">"Grafik drayver parametrlaridan foydalanish"</string>
     <string name="night_light_main_switch_title" msgid="3428298022467805219">"Tungi rejimdan foydalanish"</string>
