--- a/res/values-km/strings.xml
+++ b/res/values-km/strings.xml
@@ -1104,8 +1104,7 @@
     <string name="display_white_balance_title" msgid="2624544323029364713">"បង្ហាញតុល្យភាព​ពណ៌ស"</string>
     <string name="display_white_balance_summary" msgid="7625456704950209050"></string>
     <string name="peak_refresh_rate_title" msgid="1878771412897140903">"Smooth Display"</string>
-    <!-- no translation found for peak_refresh_rate_summary (3627278682437562787) -->
-    <skip />
+    <string name="peak_refresh_rate_summary" msgid="3627278682437562787">"បង្កើន​អត្រា​ផ្ទុកឡើងវិញ​ដោយស្វ័យប្រវត្តិ​ពី 60 ទៅ <xliff:g id="ID_1">%1$s</xliff:g> Hz សម្រាប់​ខ្លឹមសារ​មួយចំនួន។ ប្រើប្រាស់ថ្ម​ច្រើន​ជាងមុន។"</string>
     <string name="force_high_refresh_rate_toggle" msgid="3325789621928312050">"បង្ខំឱ្យប្រើអត្រាផ្ទុក​ឡើងវិញអតិបរមា"</string>
     <string name="force_high_refresh_rate_desc" msgid="7794566420873814875">"អត្រា​ផ្ទុកឡើងវិញ​ខ្ពស់បំផុតសម្រាប់​គុណភាពនៃ​រូបមានចលនា និង​ការឆ្លើយតបនៃ​ការចុចប្រសើរជាងមុន។ ប្រើប្រាស់ថ្ម​ច្រើន​ជាងមុន។"</string>
     <string name="adaptive_sleep_title" msgid="2987961991423539233">"ការដឹងថាកំពុងនៅប្រើ"</string>
@@ -1163,8 +1162,7 @@
     <string name="dark_ui_bedtime_footer_action" msgid="1493095487994054339">"ការកំណត់​មុខងារ​ម៉ោង​គេង"</string>
     <string name="screen_timeout" msgid="7709947617767439410">"អស់ម៉ោងអេក្រង់"</string>
     <string name="screen_timeout_summary" msgid="5558778019594643427">"បន្ទាប់​ពី​អសកម្ម <xliff:g id="TIMEOUT_DESCRIPTION">%1$s</xliff:g>"</string>
-    <!-- no translation found for screen_timeout_summary_not_set (5107680774964178875) -->
-    <skip />
+    <string name="screen_timeout_summary_not_set" msgid="5107680774964178875">"មិនបានកំណត់"</string>
     <string name="wallpaper_settings_title" msgid="5635129851136006383">"ផ្ទាំង​រូបភាព"</string>
     <string name="style_and_wallpaper_settings_title" msgid="2232042809407308946">"ផ្ទាំងរូបភាព និងរចនាប័ទ្ម"</string>
     <string name="wallpaper_dashboard_summary" msgid="2324472863981057118">"អេក្រង់ដើម អេក្រង់ចាក់សោ"</string>
@@ -1175,6 +1173,8 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"សាកប្រើ​រចនាប័ទ្ម ផ្ទាំងរូបភាពផ្សេងៗគ្នា និង​អ្វីៗជាច្រើនទៀត"</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"ធាតុរក្សាអេក្រង់"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"ធាតុ​រក្សា​អេក្រង់"</string>
+    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
+    <skip />
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"ប្រើធាតុ​រក្សា​អេក្រង់"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"ពេលសាកថ្ម ឬភ្ជាប់"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"ពេលសាកថ្ម"</string>
@@ -2849,8 +2849,7 @@
     <string name="remove_guest_on_exit_summary" msgid="3969962695703280353">"លុបទិន្នន័យ និងកម្មវិធីភ្ញៀវទាំងអស់ នៅពេលចាកចេញពីមុខងារភ្ញៀវ"</string>
     <string name="remove_guest_on_exit_dialog_title" msgid="2310442892536079416">"លុបសកម្មភាពភ្ញៀវឬ?"</string>
     <string name="remove_guest_on_exit_dialog_message" msgid="8112409834021851883">"កម្មវិធី និងទិន្នន័យពីវគ្គភ្ញៀវនេះនឹងត្រូវបានលុបឥឡូវនេះ ហើយសកម្មភាពភ្ញៀវនាពេលអនាគតទាំងអស់នឹងត្រូវបានលុប នៅរាល់ពេលដែលអ្នកចាកចេញពីមុខងារភ្ញៀវ"</string>
-    <!-- no translation found for remove_guest_on_exit_keywords (4961310523576166193) -->
-    <skip />
+    <string name="remove_guest_on_exit_keywords" msgid="4961310523576166193">"លុប, ភ្ញៀវ, សកម្មភាព, ដកចេញ, ទិន្នន័យ, អ្នកចូលមើល, លុបចេញ"</string>
     <string name="enable_guest_calling" msgid="8300355036005240911">"អនុញ្ញាត​ឱ្យ​ភ្ញៀវ​ប្រើ​ទូរសព្ទ"</string>
     <string name="enable_guest_calling_summary" msgid="4748224917641204782">"ប្រវត្តិហៅទូរសព្ទ​នឹង​ត្រូវ​បាន​ចែករំលែក​ជា​មួយ​អ្នក​ប្រើ​ជា​ភ្ញៀវ"</string>
     <string name="user_enable_calling_sms" msgid="8546430559552381324">"បើកការហៅទូរសព្ទ និងសារ SMS"</string>
@@ -3114,8 +3113,7 @@
     <string name="call_volume_option_title" msgid="1461105986437268924">"កម្រិត​សំឡេង​ហៅទូរសព្ទ"</string>
     <string name="alarm_volume_option_title" msgid="6398641749273697140">"កម្រិត​សំឡេងម៉ោង​រោទ៍"</string>
     <string name="ring_volume_option_title" msgid="1520802026403038560">"កម្រិតសំឡេងរោទ៍ និងការជូនដំណឹង"</string>
-    <!-- no translation found for separate_ring_volume_option_title (2212910223857375951) -->
-    <skip />
+    <string name="separate_ring_volume_option_title" msgid="2212910223857375951">"កម្រិត​សំឡេង​រោទ៍"</string>
     <string name="notification_volume_option_title" msgid="4838818791683615978">"កម្រិត​សំឡេង​ការ​ជូន​ដំណឹង"</string>
     <string name="ringtone_title" msgid="3271453110387368088">"សំឡេង​រោទ៍​ទូរសព្ទ"</string>
     <string name="notification_ringtone_title" msgid="6924501621312095512">"សំឡេង​ជូន​ដំណឹង​លំនាំដើម"</string>
@@ -3414,6 +3412,10 @@
     <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"ប្ដូរការកំណត់​សម្រាប់កម្មវិធី​នីមួយៗដែល​ផ្ញើការជូនដំណឹង"</string>
     <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"កម្មវិធីដែលបង្ហាញ​នៅលើឧបករណ៍"</string>
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"កម្មវិធីនេះមិនស្គាល់ការកំណត់ដែលប្រសើរឡើងទេ"</string>
+    <!-- no translation found for notif_listener_more_settings (1348409392307208921) -->
+    <skip />
+    <!-- no translation found for notif_listener_more_settings_desc (7995492074281663658) -->
+    <skip />
     <string name="vr_listeners_title" msgid="4960357292472540964">"សេវាកម្មជំនួយ VR"</string>
     <string name="no_vr_listeners" msgid="8442646085375949755">"មិនមានកម្មវិធីដែលបានដំឡើងត្រូវបានស្នើឲ្យដំណើរការជាសេវាកម្មជំនួយ VR នោះទេ។"</string>
     <string name="vr_listener_security_warning_title" msgid="7026351795627615177">"អនុញ្ញាតឲ្យសេវាកម្ម VR ចូលដំណើរការ <xliff:g id="SERVICE">%1$s</xliff:g>?"</string>
@@ -3868,8 +3870,7 @@
     <string name="users_summary" msgid="8473589474976307510">"ចូលជា <xliff:g id="USER_NAME">%1$s</xliff:g>"</string>
     <string name="android_version_summary" msgid="7818952662015042768">"បានដំឡើង​ជំនាន់ទៅ Android <xliff:g id="VERSION">%1$s</xliff:g>"</string>
     <string name="android_version_pending_update_summary" msgid="5404532347171027730">"មាន​កំណែថ្មី"</string>
-    <!-- no translation found for disabled_by_policy_title (6852347040813204503) -->
-    <skip />
+    <string name="disabled_by_policy_title" msgid="6852347040813204503">"បានទប់ស្កាត់ដោយ​គោលការណ៍ការងារ"</string>
     <string name="disabled_by_policy_title_adjust_volume" msgid="1669689058213728099">"មិនអាចផ្លាស់ប្ដូរកម្រិតសំឡេងបានទេ"</string>
     <string name="disabled_by_policy_title_outgoing_calls" msgid="400089720689494562">"មិនអាច​ហៅទូរសព្ទ​បានទេ"</string>
     <string name="disabled_by_policy_title_sms" msgid="8951840850778406831">"មិនអាច​ផ្ញើសារ SMS បានទេ"</string>
@@ -3879,8 +3880,7 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"បានទប់ស្កាត់ដោយក្រុមហ៊ុនផ្ដល់សេវាឥណទានរបស់អ្នក"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"ត្រូវយល់ព្រម​ពីមាតាបិតា"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"ឱ្យ​ទូរសព្ទ​ទៅមាតាបិតា​របស់អ្នក ដើម្បីចាប់ផ្ដើម​រៀបចំ​ការផ្ទៀងផ្ទាត់​នេះ"</string>
-    <!-- no translation found for default_admin_support_msg (8816296554831532033) -->
-    <skip />
+    <string name="default_admin_support_msg" msgid="8816296554831532033">"ដើម្បីទទួលបានព័ត៌មានបន្ថែម សូមទាក់ទងទៅអ្នកគ្រប់គ្រង​ផ្នែកព័ត៌មានវិទ្យារបស់អ្នក"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"ព័ត៌មានលម្អិតបន្ថែម"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"អ្នកគ្រប់គ្រង​របស់អ្នក​អាច​តាមដាន និងគ្រប់គ្រងកម្មវិធី និងទិន្នន័យដែលពាក់ព័ន្ធជាមួយកម្រង​ព័ត៌មាន​ការងារ​របស់អ្នក ដោយរាប់បញ្ចូលទាំងការកំណត់ ការអនុញ្ញាត ការចូលលក្ខណៈក្រុមហ៊ុន សកម្មភាពបណ្តាញ និងព័ត៌មានអំពីទីតាំងរបស់ឧបករណ៍នេះផងដែរ។"</string>
     <string name="admin_profile_owner_user_message" msgid="4929926887231544950">"អ្នកគ្រប់គ្រង​របស់អ្នក​អាច​តាមដាន និងគ្រប់គ្រងកម្មវិធី និងទិន្នន័យដែលពាក់ព័ន្ធជាមួយអ្នក​ប្រើប្រាស់​នេះ ដោយរាប់បញ្ចូលទាំងការកំណត់ ការអនុញ្ញាត ការចូលលក្ខណៈក្រុមហ៊ុន សកម្មភាពបណ្តាញ និងព័ត៌មានអំពីទីតាំងរបស់ឧបករណ៍នេះផងដែរ។"</string>
@@ -4711,8 +4711,7 @@
     <string name="developer_options_main_switch_title" msgid="1720074589554152501">"ប្រើ​ជម្រើសសម្រាប់អ្នកអភិវឌ្ឍន៍"</string>
     <string name="default_print_service_main_switch_title" msgid="4697133737128324036">"ប្រើសេវាកម្ម​បោះពុម្ព"</string>
     <string name="multiple_users_main_switch_title" msgid="6686858308083037810">"អនុញ្ញាតអ្នកប្រើប្រាស់ច្រើន"</string>
-    <!-- no translation found for multiple_users_main_switch_keywords (4845954458094134356) -->
-    <skip />
+    <string name="multiple_users_main_switch_keywords" msgid="4845954458094134356">"អនុញ្ញាត, ពហុ, អ្នកប្រើប្រាស់, ផ្ដល់សិទ្ធិ, ច្រើន"</string>
     <string name="wireless_debugging_main_switch_title" msgid="8463499572781441719">"ប្រើ​ការជួសជុលដោយឥតខ្សែ"</string>
     <string name="graphics_driver_main_switch_title" msgid="6125172901855813790">"ប្រើចំណូលចិត្ត​ដ្រាយវើ​ក្រាហ្វិក"</string>
     <string name="night_light_main_switch_title" msgid="3428298022467805219">"ប្រើមុខងារ​ពន្លឺពេលយប់"</string>
