--- a/res/values-mn/strings.xml
+++ b/res/values-mn/strings.xml
@@ -1104,8 +1104,7 @@
     <string name="display_white_balance_title" msgid="2624544323029364713">"Дэлгэцийн цайралтын тэнцвэр"</string>
     <string name="display_white_balance_summary" msgid="7625456704950209050"></string>
     <string name="peak_refresh_rate_title" msgid="1878771412897140903">"Smooth Display"</string>
-    <!-- no translation found for peak_refresh_rate_summary (3627278682437562787) -->
-    <skip />
+    <string name="peak_refresh_rate_summary" msgid="3627278682437562787">"Зарим контентын сэргээх хурдыг автоматаар 60-с <xliff:g id="ID_1">%1$s</xliff:g> Гц болгож өсгөнө. Батарей ашиглалтыг нэмэгдүүлнэ."</string>
     <string name="force_high_refresh_rate_toggle" msgid="3325789621928312050">"Сэргээх хамгийн өндөр хурдыг хүчлэх"</string>
     <string name="force_high_refresh_rate_desc" msgid="7794566420873814875">"Хүрэлтийн хариу үйлдэл болон анимацийн чанарыг сайжруулахад зориулсан хамгийн өндөр сэргээх үнэлгээ юм. Батарей ашиглалтыг нэмэгдүүлнэ."</string>
     <string name="adaptive_sleep_title" msgid="2987961991423539233">"Соргог дэлгэц"</string>
@@ -1174,6 +1173,7 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"Өөр загвар, дэлгэцийн зураг болон бусад зүйлийг туршиж үзнэ үү"</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"Дэлгэц амраагч"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"дэлгэц амраагч"</string>
+    <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"Унтлагын цагийн горим асаалттай тул боломжгүй"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"Дэлгэц амраагчийг ашиглах"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"Цэнэглэх эсвэл суурилуулах үед"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"Цэнэглэж байх үед"</string>
@@ -2848,8 +2848,7 @@
     <string name="remove_guest_on_exit_summary" msgid="3969962695703280353">"Бүх зочны апп болон өгөгдлийг зочны горимоос гарах үед устгана"</string>
     <string name="remove_guest_on_exit_dialog_title" msgid="2310442892536079416">"Зочны үйл ажиллагааг устгах уу?"</string>
     <string name="remove_guest_on_exit_dialog_message" msgid="8112409834021851883">"Энэ зочны харилцан үйлдлийн аппууд болон өгөгдлийг одоо устгах бөгөөд ирээдүйн бүх зочны үйл ажиллагааг таныг зочны горимоос гарах бүрд устгана"</string>
-    <!-- no translation found for remove_guest_on_exit_keywords (4961310523576166193) -->
-    <skip />
+    <string name="remove_guest_on_exit_keywords" msgid="4961310523576166193">"устгах, зочин, үйл ажиллагаа, хасах, өгөгдөл, зочин, устгах"</string>
     <string name="enable_guest_calling" msgid="8300355036005240911">"Зочинд утас ашиглахыг зөвшөөрөх"</string>
     <string name="enable_guest_calling_summary" msgid="4748224917641204782">"Дуудлагын түүхийг зочин хэрэглэгчтэй хуваалцана"</string>
     <string name="user_enable_calling_sms" msgid="8546430559552381324">"Утасны дуудлага &amp; SMS авах"</string>
@@ -3113,8 +3112,7 @@
     <string name="call_volume_option_title" msgid="1461105986437268924">"Дуудлагын дууны түвшин"</string>
     <string name="alarm_volume_option_title" msgid="6398641749273697140">"Сэрүүлгийн дууны түвшин"</string>
     <string name="ring_volume_option_title" msgid="1520802026403038560">"Хонх ба мэдэгдлийн дууны түвшин"</string>
-    <!-- no translation found for separate_ring_volume_option_title (2212910223857375951) -->
-    <skip />
+    <string name="separate_ring_volume_option_title" msgid="2212910223857375951">"Хонхны дууны түвшин"</string>
     <string name="notification_volume_option_title" msgid="4838818791683615978">"Мэдэгдлийн дууны түвшин"</string>
     <string name="ringtone_title" msgid="3271453110387368088">"Утасны хонхны ая"</string>
     <string name="notification_ringtone_title" msgid="6924501621312095512">"Мэдэгдлийн өгөгдмөл ая"</string>
@@ -3413,6 +3411,8 @@
     <string name="notif_listener_excluded_app_summary" msgid="2914567678047195396">"Мэдэгдэл илгээдэг апп тус бүрийн тохиргоог өөрчлөх"</string>
     <string name="notif_listener_excluded_app_screen_title" msgid="8636196723227432994">"Төхөөрөмж дээр харагддаг аппууд"</string>
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"Энэ апп нь сайжруулсан тохиргоог дэмждэггүй"</string>
+    <string name="notif_listener_more_settings" msgid="1348409392307208921">"Бусад тохиргоо"</string>
+    <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"Энэ аппад бусад тохиргоо боломжтой"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"VR туслагч үйлчилгээ"</string>
     <string name="no_vr_listeners" msgid="8442646085375949755">"Суулгасан апп-с VR туслагч үйлчилгээгээр ажиллах хүсэлт гаргаагүй байна."</string>
     <string name="vr_listener_security_warning_title" msgid="7026351795627615177">"VR үйлчилгээг <xliff:g id="SERVICE">%1$s</xliff:g>-д хандахыг зөвшөөрөх үү?"</string>
@@ -3867,8 +3867,7 @@
     <string name="users_summary" msgid="8473589474976307510">"<xliff:g id="USER_NAME">%1$s</xliff:g>-р нэвтэрсэн"</string>
     <string name="android_version_summary" msgid="7818952662015042768">"Андройдын <xliff:g id="VERSION">%1$s</xliff:g> хувилбарт шинэчилсэн"</string>
     <string name="android_version_pending_update_summary" msgid="5404532347171027730">"Шинэчлэх боломжтой"</string>
-    <!-- no translation found for disabled_by_policy_title (6852347040813204503) -->
-    <skip />
+    <string name="disabled_by_policy_title" msgid="6852347040813204503">"Ажлын бодлогоор блоклосон"</string>
     <string name="disabled_by_policy_title_adjust_volume" msgid="1669689058213728099">"Дууны түвшнийг өөрчлөх боломжгүй"</string>
     <string name="disabled_by_policy_title_outgoing_calls" msgid="400089720689494562">"Дуудлага хийх боломжгүй"</string>
     <string name="disabled_by_policy_title_sms" msgid="8951840850778406831">"SMS мессеж илгээх боломжгүй"</string>
@@ -3878,8 +3877,7 @@
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"Таны кредит олгогчоос блоклосон"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"Эцэг эх шаардлагатай"</string>
     <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"Үүнийг тохируулж эхлэхийн тулд утсыг эцэг эхдээ өгнө үү"</string>
-    <!-- no translation found for default_admin_support_msg (8816296554831532033) -->
-    <skip />
+    <string name="default_admin_support_msg" msgid="8816296554831532033">"Дэлгэрэнгүй мэдээлэл авах бол IT админтайгаа холбогдоно уу"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"Илүү дэлгэрэнгүй"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"Тохиргоо, зөвшөөрөл, байгууллагын хандалт, сүлжээний үйл ажиллагаа болон төхөөрөмжийн байршлын мэдээлэл зэрэг таны ажлын профайлтай холбоотой апп, өгөгдлийг таны админ удирдаж, хянах боломжтой."</string>
     <string name="admin_profile_owner_user_message" msgid="4929926887231544950">"Тохиргоо, зөвшөөрөл, байгууллагын хандалт, сүлжээний үйл ажиллагаа болон төхөөрөмжийн байршлын мэдээлэл зэрэг энэ хэрэглэгчтэй холбоотой апп, өгөгдлийг таны админ удирдаж, хянах боломжтой."</string>
@@ -4710,8 +4708,7 @@
     <string name="developer_options_main_switch_title" msgid="1720074589554152501">"Хөгжүүлэгчийн тохиргоог ашиглах"</string>
     <string name="default_print_service_main_switch_title" msgid="4697133737128324036">"Хэвлэгчийн үйлчилгээ ашиглах"</string>
     <string name="multiple_users_main_switch_title" msgid="6686858308083037810">"Олон хэрэглэгчийг зөвшөөрөх"</string>
-    <!-- no translation found for multiple_users_main_switch_keywords (4845954458094134356) -->
-    <skip />
+    <string name="multiple_users_main_switch_keywords" msgid="4845954458094134356">"зөвшөөрөх, хэд хэдэн, хэрэглэгч, зөвшөөрөл олгох, олон"</string>
     <string name="wireless_debugging_main_switch_title" msgid="8463499572781441719">"Wireless debugging-г ашиглах"</string>
     <string name="graphics_driver_main_switch_title" msgid="6125172901855813790">"Графикийн драйверын сонголтыг ашиглах"</string>
     <string name="night_light_main_switch_title" msgid="3428298022467805219">"Шөнийн гэрлийг ашиглах"</string>
